force-app/main/default/objects/COM_Product_Discount_Approval_Levels__c/COM_Product_Discount_Approval_Levels__c.object-meta.xml
<CustomObject>
    <label>Product Discount Approval Levels</label>
    <nameField>
        <label>Product Discount Approval Levels Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Discount Approval Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>