force-app/main/default/objects/COM_Product_Discount_Approval_Levels__c/fields/ApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLevel__c</fullName>
    <label>ApprovalLevel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>