force-app/main/default/objects/COM_Product_Discount_Approval_Levels__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount percentage.</description>
    <inlineHelpText>Discount percentage.</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>