force-app/main/default/objects/COM_Product_Discount_Approval_Levels__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>Product Id</description>
    <label>ProductId</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>