force-app/main/default/objects/COM_Product_Discount_Approval_Levels__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product name</description>
    <label>ProductName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>